--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,3 +48,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
+          build-args: GH_PAT=${{ secrets.GITHUB_TOKEN }}
+
